--- a/index.html
+++ b/index.html
@@ -20,40 +20,44 @@
       </header>
     </div>
     <div class="page-wrapper">
-    	<section class="catalog">
+      <section class="catalog">
         <h1 class="hidden">Таблица продуктов</h1>
-    		<header class="catalog__header">
-    			<ul class="catalog__captions">
-    				<li class="catalog__caption catalog__caption--name">
+        <header class="catalog__header">
+          <ul class="catalog__captions">
+            <li class="catalog__caption catalog__caption--name">
               <h2 class="catalog__name">Name</h2>
               <a href="#" class="catalog__arrow-name"></a>
             </li>
-    				<li class="catalog__caption catalog__caption--price">
+            <li class="catalog__caption catalog__caption--price">
               <h2 class="catalog__price">Price</h2>
               <a href="#" class="catalog__arrow-price catalog__arrow-increase-price"></a>
               <a href="#" class="catalog__arrow-price catalog__arrow-decrease-price hidden"></a>
             </li>
-    				<li class="catalog__caption catalog__caption--actions">
+            <li class="catalog__caption catalog__caption--actions">
               <h2 class="catalog__actions">Actions</h2>
             </li>
-    			</ul>
-    		</header>
-    	</section>
+          </ul>
+        </header>
+      </section>
       <section class="add-update">
-        <form action="/echo" method="post" class="add-update__form">
-          <div class="add-update__wrapper">
-            <label for="name" class="add-update__name">Name: <p class="add-update__description">*Required field</p></label>
-            <label for="count" class="add-update__count">Count:</label>
-            <label for="price" class="add-update__price">Price:</label>
-          </div>
-          <div class="add-update__wrapper-input">
-            <input type="text" id="name" class="add-update__name-field" maxlength="15">
-            <input type="number" id="count" min="0" class="add-update__count-field">
-            <input type="number" id="price" min="0" step="0.01" class="add-update__price-field"> 
-            <input type="submit" id="add" value="Add" class="button button--add" >
-          </div>
-        </form>
-        <p class="error-message">Заполните поле Name</p>
+        <div class="add-update-wrapper">
+          <form action="/echo" method="post" class="add-update__form">
+            <div class="add-update__form-wrapper">
+             <label for="name" class="add-update__name">Name: </label>
+              <div class="form__wrapper">
+                <input type="text" id="name" class="add-update__name-field" maxlength="15">
+                <p class="add-update__description">*Required field</p>
+                <p class="error-message">Заполните поле Name</p>  
+              </div>
+              <label for="count" class="add-update__count">Count:</label>
+              <input type="number" id="count" min="0" class="add-update__count-field">
+              <label for="price" class="add-update__price">Price:</label>
+              <input type="number" id="price" min="0" step="0.01" class="add-update__price-field"> 
+              <input type="submit" id="add" value="Add" class="button button--add"> 
+            </div>
+              <button type="button" id="close" class="button button--close"></button>
+          </form> 
+        </div> 
       </section>
     </div>
     <div class="confirmation">
@@ -64,6 +68,6 @@
         <button type="button" class="button button__cancel">No</button>
       </div>
     </div>
-    <script src="js/script.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
  </html>
